--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ openai = "^1.50.2"
 cryptography = "^43.0.1"
 groq = "^0.11.0"
 pandas = "^2.2.3"
+pinecone = "^5.3.1"
+qdrant-client = "^1.11.3"
 
 
 [build-system]
