--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ groq = "^0.11.0"
 pandas = "^2.2.3"
 pinecone = "^5.3.1"
 qdrant-client = "^1.11.3"
+opencv-python = "^4.10.0.84"
 
 
 [build-system]
