--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.12"
 ruff = "^0.6.8"
 pydantic = "^2.9.2"
-numpy = "^2.1.1"
+numpy = "^2.0.0"
 pymupdf = "^1.24.10"
 ipykernel = "^6.29.5"
 boto3 = "^1.35.29"
@@ -21,6 +21,13 @@ pandas = "^2.2.3"
 pinecone = "^5.3.1"
 qdrant-client = "^1.11.3"
 opencv-python = "^4.10.0.84"
+python-docx = "^1.1.2"
+pillow = "^10.4.0"
+spacy = "^3.8.2"
+pytest = "^8.3.3"
+openpyxl = "^3.1.5"
+docx2pdf = "^0.1.8"
+bs4 = "^0.0.2"
 
 
 [build-system]
