--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,14 @@ jobs:
       with:
         python-version: '3.12'  # Match your Python version
 
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+        echo "Poetry installed"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
         poetry install
 
     - name: Run tests
