--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ openpyxl = "^3.1.5"
 docx2pdf = "^0.1.8"
 bs4 = "^0.0.2"
 tenacity = "^9.0.0"
+transformers = "^4.45.1"
+torch = "^2.4.1"
+sentence-transformers = "^3.1.1"
 
 
 [build-system]
