--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ tenacity = "^9.0.0"
 transformers = "^4.45.1"
 torch = "^2.4.1"
 sentence-transformers = "^3.1.1"
+clip = {git = "https://github.com/openai/CLIP.git"}
 
 
 [build-system]
