--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "multivec-ai"
+name = "multivec"
 version = "0.1.0"
 description = "Supercharge your LLMs with synthetic high-quality multimodal Data"
 authors = ["mr-green1337 <islam.hachimi2003@gmail.com>"]
