--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ tenacity = "^9.0.0"
 transformers = "^4.45.1"
 torch = "^2.4.1"
 sentence-transformers = "^3.1.1"
-clip = {git = "https://github.com/openai/CLIP.git"}
+openai-clip = "^1.0.1"
+torchvision = "^0.19.1"
 
 
 [build-system]
