Improvs on data loading

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,15 +24,15 @@ python-docx = "^1.1.2"
 pillow = "^10.4.0"
 spacy = "^3.8.2"
 pytest = "^8.3.3"
-openpyxl = "^3.1.5"
 docx2pdf = "^0.1.8"
 bs4 = "^0.0.2"
 tenacity = "^9.0.0"
-transformers = "^4.45.1"
-torch = "^2.4.1"
-sentence-transformers = "^3.1.1"
 openai-clip = "^1.0.1"
-torchvision = "^0.19.1"
+azure-storage-blob = "^12.23.1"
+matplotlib = "^3.9.2"
+selenium = "^4.25.0"
+pytesseract = "^0.3.13"
+opencv-python = "^4.10.0.84"
 
 
 [build-system]
